--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.eclipse.californium</groupId>
-	<artifactId>parent</artifactId>
+	<artifactId>californium-moudles</artifactId>
 	<version>3.8.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
